tests/specs/run/package_json_type/commonjs/basic/main_mix.out
3
error: Uncaught (in promise) ReferenceError: require is not defined
console.log(require("./add").add(1, 2));
        ^
    at file:///[WILDLINE]main_mix.js:[WILDLINE]

    info: Deno supports CommonJS modules in .cjs files, or when the closest
          package.json has a "type": "commonjs" option.
    hint: Rewrite this module to ESM,
          or change the file extension to .cjs,
          or add package.json next to the file with "type": "commonjs" option,
          or pass --unstable-detect-cjs flag to detect CommonJS when loading.
    docs: https://docs.deno.com/go/commonjs
