tests/specs/run/package_json_type/commonjs/basic/main_mix.js
import { add } from "./add.js";

console.log(add(1, 2));

// will error
console.log(require("./add").add(1, 2));
